# radiotray-lite

./: .gitignore  CMakeLists.txt  COMPATIBILITY.md  README.md  build-appimage.sh  build-deb.sh  build-options.conf  detect-tray-backends.sh  uninstall-radiotray-lite.sh
.github/workflows/: linux-deb.yml
cmake/: CPackConfig.cmake.in
src/: CMakeLists.txt  playlist.cpp  playlist.hpp  tray.cpp  tray.hpp
